# vyre

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  THESIS.md
vyre-bench/: .gitattributes  Cargo.toml  RELEASE_BRIEF.md
vyre-bench/src/: cli.rs  lib.rs  release_matrix.rs
vyre-bench/tests/: ann_research_planners.rs  benchmark_methodology_contracts.rs  benchmark_target_contracts.rs  corpus_paging_planner.rs  coverage_sanitizer_matrix.rs  cross_backend_counter_schema.rs  dataset_lineage_catalog.rs  g10_cross_backend.rs  metrics_exposition_contracts.rs  parser_structural_index_prepass.rs  prototype_kernel_comparator.rs  regex_cpu_gpu_partition_registry.rs  regex_engine_comparator_registry.rs  regex_external_accelerator_routes.rs  relation_engine_comparators.rs  release_matrix_contracts.rs  reproducibility_capsules.rs  roofline_counter_evidence.rs  scan_counter_evidence_registry.rs  scan_counter_proxy_capture_cuda.rs  scan_roofline_bandwidth_cuda.rs  scan_roofline_model_cuda.rs  scan_roofline_operating_point_cuda.rs  statistical_regression_gates.rs  suite_completeness.rs
vyre-driver/: Cargo.toml  PUBLIC_API.md
vyre-driver-cuda/: Cargo.toml
vyre-driver-cuda/src/: codegen.rs  device.rs  egraph_kernel_plan.rs  jit_cache.rs  lib.rs  occupancy.rs  regex_hardware_comparison.rs  synthetic_device_caps.rs  warp_word_automata.rs
vyre-driver-cuda/tests/: adaptive_traverse_vast_walk_gpu_parity.rs  bitset_primitives_gpu_parity.rs  borrowck_reachability_cuda.rs  capability_contracts.rs  cooperative_launch_contracts.rs  csr_frontier_queue_gpu_parity.rs  cuda_ffi_template_contracts.rs  cuda_graph_dispatch_parity.rs  cuda_graph_update_evidence.rs  cuda_scan_memory_pool_registry.rs  cuda_stream_ordered_pool_planner.rs  cuda_warp_nfa_plan_registry.rs  device_pool_hit_rate_evidence.rs  div_zero_shift_mask_cuda_parity.rs  egraph_device_image_upload.rs  generated_atomic_cuda_reference_matrix.rs  generated_control_cuda_reference_matrix.rs  generated_resident_cuda_reference_matrix.rs  generated_resident_sequence_cuda_reference_matrix.rs  gpu_automata_load_balance_registry.rs  hash_parsing_primitives_gpu_parity.rs  int4_quantized_gpu_parity.rs  misc_primitives_batch_gpu_parity.rs  narrowing_cast_cuda_parity.rs  occupancy_evidence.rs  regex_bitstream_program_registry.rs  resident_buffer_contracts.rs  resident_dispatch_contracts.rs  resident_presence_8mib_dispatch_attribution.rs  resident_presence_cuda_parity.rs  resident_rule_pipeline_cuda_parity.rs  self_optimizer_const_prop_e2e.rs  self_optimizer_pattern_match_extended.rs  subgroup_reduce_gpu_parity.rs  synthetic_binop_cuda_parity.rs  vectorized_memory_live_cuda.rs  widening_cast_64_cuda_parity.rs
vyre-driver-wgpu/: Cargo.toml  PUBLIC_API.md  build.rs
vyre-driver-wgpu/src/: ext.rs  lib.rs  megakernel.rs  numeric.rs  padded_upload.rs  parity_probe.rs  pipeline.rs  resident_download.rs  resident_upload.rs
vyre-driver-wgpu/tests/: adler32_gpu_parity.rs  blake3_compress_gpu_parity.rs  buf_len_array_length.rs  capability_contract.rs  capability_drift.rs  cat_a_gpu_differential.rs  crc32_gpu_parity.rs  div_zero_shift_mask_parity.rs  float_to_int_cast_parity.rs  fnv1a32_gpu_parity.rs  fnv1a64_gpu_parity.rs  megakernel_combined_scan.rs  megakernel_combined_vs_perrule.rs  megakernel_divergent_recall.rs  megakernel_longterm_edge_cases.rs  megakernel_segmentation_conservation_and_throughput.rs  megakernel_telemetry_contracts.rs  naga_findings_followup.rs  naga_type_buffer_followup.rs  narrowing_cast_parity.rs  newton_schulz_ir_shape.rs  readback_ring_liveness_contracts.rs  resident_buffer_contracts.rs  rule_pipeline_resident_parity.rs  same_width_store_parity.rs  signed_int_op_parity.rs  signed_modulo_parity.rs  synthetic_binop_parity.rs  unary_int_parity.rs  wgpu_command_reuse_classifier.rs  wgpu_subgroup_capability_diagnostics.rs  wgpu_subgroup_scan_plan_registry.rs  wgsl_scan_uniformity_certificates.rs  widening_cast_64_parity.rs
vyre-driver/src/: aot.rs  autotune_store.rs  backend.rs  cache_invalidation.rs  device_signature.rs  evidence.rs  fusion.rs  graph_capture.rs  grid_sync.rs  launch.rs  lib.rs  observability.rs  ordering.rs  persistent.rs  specialization.rs  subgroup.rs  tuner.rs
vyre-driver/tests/: atomic_file_operation_race_policy.rs  backend_capability_digests.rs  backend_handle_lifetime_provenance.rs  backpressure_queue_quota_policy.rs  command_execution_boundary.rs  concurrency_schedule_contracts.rs  crypto_rng_key_lifecycle.rs  extraction_memory_verifier_cost_model.rs  http_proxy_redirect_policy.rs  mixed_work_autotuning.rs  output_slab_provenance.rs  release_publication_boundary.rs  runtime_watchdog_proofs.rs  scan_graph_update_classifier_registry.rs  trace_context_telemetry_contracts.rs
vyre-emit-naga/: Cargo.toml
vyre-emit-naga/src/: lib.rs
vyre-emit-naga/tests/: adversarial_emit_program_matrix.rs
vyre-emit-spirv/: Cargo.toml
vyre-emit-spirv/src/: anchor_dfa_offload.rs  lib.rs
vyre-emit-spirv/tests/: adversarial_emit_program_matrix.rs
vyre-harness/: Cargo.toml
vyre-harness/src/: fp_contract.rs
vyre-self-substrate/: Cargo.toml
vyre-self-substrate/tests/: bellman_shortest_path_via_reference_parity.rs  bitset_mask_algebra_via_reference_parity.rs  bitset_summary_via_reference_parity.rs  cost_model_predict_runtime_via_reference_parity.rs  do_calculus_surgery_via_reference_parity.rs  fmm_compress_pairwise_via_reference_parity.rs  fmm_polyhedral_via_reference_parity.rs  functor_apply_via_reference_parity.rs  fusion_scores_via_reference_parity.rs  graph_single_source_contracts.rs  kfac_via_reference_parity.rs  match_motif_via_reference_parity.rs  matching_diagnostic_via_reference_parity.rs  matroid_exact_subset_via_reference_parity.rs  multigrid_matroid_via_reference_parity.rs  mz_project_via_reference_parity.rs  natural_config_gradient_via_reference_parity.rs  natural_gradient_via_reference_parity.rs  optimizer_bfs_and_softmax_parity.rs  organization_contracts.rs  planar_rewrite_via_reference_parity.rs  platform_doc_consumer_boundary.rs  (+21 more)
vyre-test-support/: Cargo.toml  README.md
vyre-test-support/src/: lib.rs
(+1930 files in other folders)
