[package]
name = "vyre-bench"
version = "0.6.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal vyre benchmark + parity harness across the CUDA, wgpu, SPIR-V, and reference substrates. Not published to crates.io."
publish = false

[dependencies]
vyre = { workspace = true }
vyre-foundation = { workspace = true }
vyre-driver = { workspace = true }
vyre-driver-wgpu = { workspace = true }
vyre-driver-metal = { workspace = true }
vyre-driver-spirv = { workspace = true }
vyre-driver-reference = { workspace = true }
vyre-reference = { workspace = true }
vyre-runtime = { workspace = true }
vyre-libs = { workspace = true, features = ["nn-linear-4bit", "rust-parser"] }
vyre-primitives = { workspace = true, features = ["bitset", "graph", "cpu-parity"] }
vyre-intrinsics = { workspace = true }
vyre-lower = { workspace = true }
vyre-emit-ptx = { workspace = true }
vyre-spec = { workspace = true }
vyre-frontend-rust = { workspace = true }
vyre-frontend-c = { path = "../vyre-frontend-c" }
blake3 = { workspace = true }

aho-corasick = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
inventory = { workspace = true }
regex = { workspace = true }
hashbrown = { workspace = true }
pcre2 = { workspace = true }
openssl = { workspace = true }
faer = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }
wide = { workspace = true }
anyhow = { workspace = true }
rand.workspace = true
env_logger = { workspace = true }
rusqlite = { workspace = true }
core_affinity = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
vyre-driver-cuda = { workspace = true }

[features]
default = []

[dev-dependencies]
vyre-test-support.workspace = true
criterion = { workspace = true }
proptest = { workspace = true }
vyre-emit-naga = { path = "../vyre-emit-naga" }
vyre-emit-spirv = { path = "../vyre-emit-spirv" }

[[bench]]
name = "release"
harness = false

[lints]
workspace = true
