[package]
name = "vyre-driver-cuda"
version = "0.6.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/vyre-driver-cuda"
description = "CUDA/PTX backend for vyre through the CUDA driver API."
readme = "README.md"
keywords = ["gpu", "compute", "cuda", "ptx", "vyre"]
categories = ["hardware-support"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
cuda = []

[dependencies]
vyre-driver = { workspace = true }
vyre-foundation = { workspace = true }
vyre-spec = { workspace = true }
vyre-lower.workspace = true
vyre-emit-ptx.workspace = true
# `optimizer` module dispatches the self-hosted optimizer passes
# (DCE/CSE/const-fold) on CUDA. Lives in [dependencies] (not dev-deps)
# because src/optimizer.rs is shipped lib code.
vyre-self-substrate = { workspace = true }
inventory.workspace = true
tracing.workspace = true
blake3.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
cudarc.workspace = true
rustc-hash.workspace = true
crossbeam-queue = { workspace = true }
dashmap.workspace = true
libc.workspace = true

[dev-dependencies]
# integration tests/benches assert against these crates' public APIs
vyre-libs = { workspace = true }
tempfile.workspace = true
serde_json.workspace = true
pollster.workspace = true
# Required by tests/common/mod.rs (vyre::ir, vyre::DispatchConfig) and by
# many live CUDA integration tests. `vyre` optionally depends on
# vyre-driver-cuda behind `features = ["cuda"]`; adding it here as a dev-dep
# without that feature flag does not create a cycle. Cargo dev-deps are only
# compiled for the crate being tested, not for its dependents.
vyre = { workspace = true }
# Required by tests/common/mod.rs (vyre_reference::value::Value,
# vyre_reference::reference_eval) and by differential tests.
vyre-reference = { workspace = true }
# Required by several _gpu_parity tests that import vyre_primitives::*.
# `cpu-parity` exposes the CPU reference oracles (hex_decode_reference_packed, …)
# these parity tests diff the GPU output against; gated out of production builds.
vyre-primitives = { workspace = true, features = ["cpu-parity"] }
