[package]
name = "vyre-harness"
version = "0.6.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Universal Cat-A op harness registry: OpEntry, ConvergenceContract, FixpointContract, UniversalDiffExemption  -  the registry types every vyre-built library publishes through."
readme = "README.md"
keywords = ["vyre", "gpu", "harness", "registry"]
categories = ["development-tools::testing"]
documentation = "https://docs.rs/vyre-harness"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
strict-fp = []

[dependencies]
vyre.workspace = true
vyre-foundation.workspace = true
inventory.workspace = true

[dev-dependencies]
# Integration tests assert against these crates' public APIs. The reference_* /
# *_cpu oracles they call (reference_provenance_closure, reference_fingerprint,
# sheaf_diffusion_step_cpu, compose_ir_arrows, ...) are
# `#[cfg(any(test, feature = "cpu-parity"))]`, and a DEPENDENCY is never built
# with the `test` cfg, so `cpu-parity` must be enabled here or the imports are
# unresolved under --all-features. `graph` gates `vyre_primitives::graph::sheaf`
# for the direct sheaf import; self-substrate's cpu-parity also propagates to
# vyre-primitives/cpu-parity (belt-and-suspenders, matching its own dev-dep).
vyre-primitives = { path = "../vyre-primitives", features = ["graph", "cpu-parity"], default-features = false }
vyre-self-substrate = { path = "../vyre-self-substrate", features = ["cpu-parity"] }
proptest.workspace = true
